# Inference-ServeKit

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  primerl_pb2_grpc.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: primerl.proto  primerl_pb2.py
artifacts/: sample_perf_results.csv  sample_verifier_reward.json
artifacts/research/: RESULTS_SUMMARY.md  linear_attention_cpu.txt  linear_attention_cpu_long.txt  linear_attention_h200.txt  linear_attention_h200_long.txt  linear_attention_inference_demo.txt  (+1 more)
cache/: eviction.py  global_prefix_cache.py  prefix_fingerprint.py
demos/: eval_harness.py  ppo_summarize_tooluse.py
docs/: api.md  benchmarks.md  blog_linear_attention.md  design.md  observability.md  research.md  runbook.md
engines/: __init__.py  dummy_adapter.py  sglang_adapter.py  trtllm_adapter.py  vllm_adapter.py
grpo/: advantage.py  dataset.py  learner.py  rater.py  sampler.py
mock_engine/: app.py
perf/: baseline.csv  bench_matrix.py  exporters.py  perf_gate.py
placement/: kv_budget.py  mig_inventory.py  scheduler.py
rl_client/: async_decode_client.py  batcher.py  grammars.py  grpc_client.py  session_manager.py
scripts/: analyze_metrics.py  bench_linear_attention.py  bench_linear_attention_cpu.sh  benchmark_gpt2_linear_attention.py  demo_linear_vs_softmax_inference.py  dev_loop.sh  prime_demo.sh
server/: main.py  service.py
speculation/: tool_boundary_spec.py
tests/: test_prefix_cache.py  test_speculation.py
trainers/: cleanrl_adapter.py  rllib_adapter.py  trl_ppo_adapter.py
(+43 files in other folders)
